chore/fix receive panel layout bug (#1789)
* fix receivePanel layout bug

* fixes: 12px change was a test

* remove code per review suggestion

* actually remove code per review suggestion

--- a/app/components/Receive/ReceivePanel/styles.scss
+++ b/app/components/Receive/ReceivePanel/styles.scss
@@ -7,10 +7,6 @@
   justify-content: center;
 }
 
-.receivePanel {
-  height: 100%;
-}
-
 .receivePanelContent {
   display: flex;
   padding: 0;
